# chatbot-cotin

./: .gitignore  =3.0.10  LICENSE  app.py  app2.py  app3.py  appv2.py  chainlit.md  pyproject.toml  readme.md  requirements.txt
.chainlit/: config.toml
.chainlit/translations/: en-US.json  pt-BR.json
chroma_db/: chroma.sqlite3
chroma_db/2af47356-d4f7-48cc-9a90-c30d6163f118/: index_metadata.pickle
chroma_db/5274c085-4236-4a1c-9ca0-97298a0bd483/: index_metadata.pickle
feedback/: feedback_20250505_222218.json  feedback_20250505_222430.json  feedback_20250507_151139.json  feedback_20250507_154929.json  feedback_20250507_155052.json  feedback_20250515_112539.json  feedback_20250515_112605.json  feedback_20250515_114212.json
public/: favicon  theme.json
src/config/: settings.py
src/llm/: chain.py  prompts.py
src/loaders/: document_loaders.py
src/processing/: text_processor.py
src/retrieval/: embeddings.py  vector_store.py
src/ui/: chainlit_handlers.py
